// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom|Decorator for Vue render 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid blue;"
  >
    <div
      style="border: medium solid blue;"
    >
      <div
        style="border: medium solid red;"
      >
        <button
          class="button"
        >
          renders component: MyButton!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Custom|Decorator for Vue template 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid blue;"
  >
    <div
      style="border: medium solid blue;"
    >
      <div
        style="border: medium solid red;"
      >
        <button
          class="button"
          style="color: rgb(66, 185, 131); border-color: #42b983;"
        >
          MyButton with template!
        </button>
      </div>
    </div>
  </div>
</div>
`;
